--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,10 @@ body{
 	float:left;
 	margin: 13px 5px;
 }
+#seats #find-form{
+	max-width: 300px;
+	margin: 20px auto;
+}
 /* 底部版权 */
 .foot{
 	text-align:center;
