--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ body{
 	width: 140px;
 	text-align: center;
 	float:left;
-	margin:0 5px;
+	margin:10px 10px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
