--- a/css/style.css
+++ b/css/style.css
@@ -290,14 +290,15 @@ body{
 	color:#FFF;
 	overflow:hidden;
 	padding: 0px;
+	width: 100%;
 }
 #seats #find-result ul li{
 	padding: 10px 10px;
 	background-color: #D3B144;
-	width: 140px;
+	width: 46%;
 	text-align: center;
 	float:left;
-	margin:10px 10px;
+	margin:10px 2%;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -366,10 +367,7 @@ body{
 #seats #not-bought{
 	width: 100%;
 }
-#seats #not-bought .none-result{
-	position:relative;
-	left:-10px !important;
-}
+
 #seats #find-result .none-result{
 	margin: 20px auto;
 	width: 100%;
@@ -412,6 +410,9 @@ body{
 	height: 15px;
 	margin: 2px 10px 0px 5px;
 	float: left;
+	border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
 
 }
 /* 底部版权 */
