--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 /* 响应式布局 */
 
-@media (max-width: 768px) {
+@media (max-width: 850px) {
 	/* 轮播 */
 	.carousel{
 		height:300px;
@@ -24,7 +24,7 @@
 	}
 }
 
-@media (min-width: 768px) {
+@media (min-width: 850px) {
 	.carousel{
 		height:500px;
 	}
@@ -37,13 +37,42 @@
 	.carousel img {
 		min-height: 500px;
 	}
+
+	.carousel-caption p {
+		font-size: 18px;
+		line-height: 1.4;
+	}
 	
+}
+
+@media (max-width: 500px) {
+	.carousel{
+		height:200px;
+	}
+
+	.carousel-inner .item{
+		width:100%;
+		height:200px;
+	}
+	
+	.carousel img {
+		min-height: 200px;
+	}
+
+	.carousel-caption p {
+		font-size: 13px;
+		line-height: 1.4;
+	}
 }
 
 body{
 	font-family:"Microsoft Yahei";
 	padding:0;
 	margin:0;
+}
+
+html{
+	background-color: #333;
 }
 
 /* 轮播 */
@@ -67,24 +96,30 @@ body{
 	padding: 40px 0 60px 0;
 }
 #introduction .intro-item{
-	padding:40px 0 20px 0;
+	padding: 10% 0 10% 0;
 	text-align:center;
+	font-size: 14px;
 }
 #introduction .intro-item i{
 	font-size:50px;
 }
-#introduction .intro-item .icon1{
-	color:#37A9DA;
+#introduction .row {
+	overflow: hidden;
+	padding: 0;
 }
-#introduction .intro-item .icon2{
-	color:#FF5959;
+#introduction .row .col{
+	width:30%;
+	float:left;
+	margin-left: 1.6%;
+	margin-right: 1.6%
 }
-#introduction .intro-item .icon3{
-	color:#3AE470;
+
+#introduction #intro3 img{
+	padding-bottom: 5%;
 }
 #introduction .intro-item img{
-	width:250px;
-	height:250px;
+	width:60%;
+	height:60%;
 }
 #introduction .intro-item p{
 	margin-top:30px;
@@ -448,7 +483,7 @@ body{
 /* 底部版权 */
 .foot{
 	text-align:center;
-	padding-top:40px;
+	padding-top:30px;
 	font-size:15px;
 	color:#aaa;
 	background-color:#333;
